# malloc

./: .gitignore  Makefile  author  build.sh  meson.build
inc/: ft_malloc.h  ft_malloc_internal.h  meson.build  t.h  tests.h
lib/libft/: ft_bzero.c  ft_isalpha.c  ft_isprint.c  ft_lst_at.c  ft_lst_len.c  ft_lst_merge_sort.c  ft_lst_search.c  ft_lstadd_back.c  ft_lstdelone.c  ft_lststrsplit.c  ft_memalloc.c  ft_memccpy.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_str_table_len.c  ft_strcat.c  ft_strclr.c  ft_strcmp_lex.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strnstr.c  ft_strtrim.c  ft_toupper.c  get_next_line.c
lib/libft/includes/: libft.h
src/: calloc.c  free.c  get_arena_type.c  malloc.c  meson.build  realloc.c  show_alloc_mem.c
subprojects/libft/: Makefile  ft_atof.c  ft_atoi.c  ft_isalnum.c  ft_isascii.c  ft_isdigit.c  ft_isspace.c  ft_itoa.c  ft_lst_merge_sort.c  ft_lst_rev.c  ft_lstadd.c  ft_lstdel.c  ft_lstfind.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstreduce.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_num_len.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putstr.c  ft_putstr_fd.c  ft_read_file.c  ft_realloc.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  (+13 more)
t/: fuzzy.c  fuzzy_fast.c  malloc_tests.c  meson.build  tests.c
